--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -18,7 +18,15 @@ jobs:
         with:
           node-version: '14'
           cache: 'npm'
-      - run: npm ci
-      - run: npm run build --if-present
-      - run: npm run lint
-      - run: npm run test-headless
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build
+        run: npm run build --if-present
+
+      - name: Lint
+        run: npm run lint
+
+      - name: Test
+        run: npm run test-headless
