chore: CI update yml

--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -19,8 +19,15 @@ jobs:
           node-version: '14'
           cache: 'npm'
 
-      - name: Install dependencies
-        run: npm ci
+      - name: Cache NPM dependencies
+        uses: actions/cache@v3
+        id: cache-npm
+        with:
+        path: node_modules
+        key: ${}-node-${{ hashFiles('package-lock.json') }}
+          - name: Install dependencies
+            if: steps.cache-primes.outputs.cache-hit != 'true'
+            run: npm ci
 
       - name: Build
         run: npm run build --if-present
