--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -19,15 +19,24 @@ jobs:
           node-version: '14'
           cache: 'npm'
 
-      - name: Cache NPM dependencies
+      - name: Cache node modules
+        id: cache-nodemodules
         uses: actions/cache@v3
-        id: cache-npm
+        env:
+          cache-name: cache-node-modules
         with:
-        path: node_modules
-        key: ${}-node-${{ hashFiles('package-lock.json') }}
-          - name: Install dependencies
-            if: steps.cache-primes.outputs.cache-hit != 'true'
-            run: npm ci
+          # caching node_modules
+          path: node_modules
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
+
+      - name: Install Dependencies
+          if: steps.cache-nodemodules.outputs.cache-hit != 'true'
+          run: |
+            npm ci
 
       - name: Build
         run: npm run build --if-present
