--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -19,24 +19,16 @@ jobs:
           node-version: '14'
           cache: 'npm'
 
-      - name: Cache node modules
-        id: cache-nodemodules
-        uses: actions/cache@v3
-        env:
-          cache-name: cache-node-modules
-        with:
-          # caching node_modules
+      - name: Cache NPM dependencies
+          uses: actions/cache@v3
+          id: cache-npm
+          with:
           path: node_modules
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-            ${{ runner.os }}-build-
-            ${{ runner.os }}-
+          key: ${}-node-${{ hashFiles('package-lock.json') }}
 
-      - name: Install Dependencies
-          if: steps.cache-nodemodules.outputs.cache-hit != 'true'
-          run: |
-            npm ci
+       - name: Install dependencies
+       if: steps.cache-primes.outputs.cache-hit != 'true'
+       run: npm ci
 
       - name: Build
         run: npm run build --if-present
