--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -19,16 +19,27 @@ jobs:
           node-version: '14'
           cache: 'npm'
 
-      - name: Cache NPM dependencies
-        uses: actions/cache@v3
+      - name: Cache node modules
         id: cache-npm
+        uses: actions/cache@v3
+        env:
+          cache-name: cache-node-modules
         with:
-        path: node_modules
-        key: ${}-node-${{ hashFiles('package-lock.json') }}
+          # npm cache files are stored in `~/.npm` on Linux/macOS
+          path: ~/.npm
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
+
+      - if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
+        name: List the state of node modules
+        continue-on-error: true
+        run: npm list
 
       - name: Install dependencies
-        if: steps.cache-primes.outputs.cache-hit != 'true'
-        run: npm ci
+        run: npm install
 
       - name: Build
         run: npm run build --if-present
