--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "source-map-support": "^0.5.21",
     "tslib": "^1.9.0",
     "typescript-json-schema": "^0.34.0",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.8.26",
+    "web3": "^1.8.1",
+    "@irita/irita-sdk": "github:tw-bc-group/irita-sdk-js"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
