feat: update package.json

--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "feature/irita" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "feature/irita" ]
 
 jobs:
   build:
@@ -41,11 +41,11 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Build
-        run: npm run build --if-present
-
       - name: Lint
         run: npm run lint
 
       - name: Test
-        run: npm run test-headless
+        run: npm run test:ci
+
+      - name: Build
+        run: npm run build --if-present
